# rust

bam2fastq/: Cargo.toml
bam2fastq/src/: main.rs
bamtag/: Cargo.toml
bamtag/src/: main.rs
dnbc4tools/: Cargo.toml
dnbc4tools/c4_lib/: Cargo.toml
dnbc4tools/c4_lib/src/: barcode_correction_metrics.rs
dnbc4tools/c4_lib/src/stages/: detect_chemistry.rs  make_shard.rs
dnbc4tools/c4_types/: Cargo.toml
dnbc4tools/c4_types/src/chemistry/: chemistry_defs.rs  mod.rs
dnbc4tools/fastq_set/: Cargo.toml
dnbc4tools/fastq_set/src/: array.rs  squality.rs  sseq.rs
dnbc4tools/metric/: Cargo.toml
dnbc4tools/metric/src/: lib.rs  percent_metric.rs
dnbc4tools/umi/: Cargo.toml
dnbc4tools/umi/src/: lib.rs
hello/: Cargo.toml
hello/src/: main.rs
learn1/: Cargo.toml  fq_record.json  test.txt
learn1/src/: lib.rs  main.rs
minigrep/src/: main.rs
mtx2h5/: Cargo.toml
mtx2h5/src/: main.rs
similarity/: Cargo.toml
similarity/src/: main.rs
test1/: Cargo.toml
test1/src/: main.rs
