[package]
name = "bam2fastq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.82"
serde_bytes = "0.11.5"
rust_htslib = "0.48.0"
regex = "1.5.4"
shardio = "0.8.2"
anyhow = "1.0.53"