[package]
name = "learn1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3.1"
# shardio = "0.8.2"

# serde_json is just for the example, not required in general
serde_json = "1.0"